CORS, fix DbContext concurrency issues, polishing
