# EzCatalog.API/WebAPI/DTOs/AddProductRequest.cs
@@ -1,0 +1,9 @@
+namespace EzCatalog.WebAPI.DTOs;
+
+public record AddProductRequest(
+    string Sku,
+    string Name,
+    decimal PriceAmount,
+    string PriceCurrency)
+{
+}
