# EzCatalog.API/WebAPI/DTOs/UpdateProductRequest.cs
@@ -1,6 +1,6 @@
 ﻿namespace EzCatalog.WebAPI.DTOs;
 
-public record UpdateProductCommand(
+public record UpdateProductRequest(
     string? Name = null,
     decimal? PriceAmount = null,
     string? PriceCurrency = null)
